# bluetoothScreenLock

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  bluetooth-screen-lock.desktop  pyproject.toml  requirements.txt
.github/workflows/: release.yml
debian/: bluetooth-screen-lock.1  bluetooth-screen-lock.manpages  bluetooth-screen-lock.postinst.debhelper  bluetooth-screen-lock.postrm.debhelper  changelog  control  copyright  debhelper-build-stamp  docs  files  install  postinst  postrm  rules
debian/bluetooth-screen-lock/DEBIAN/: control  md5sums  postinst  postrm
debian/bluetooth-screen-lock/usr/share/applications/: bluetooth-screen-lock.desktop
debian/bluetooth-screen-lock/usr/share/bluetooth-screen-lock/: run.py
debian/bluetooth-screen-lock/usr/share/bluetooth-screen-lock/src/bluetooth_screen_lock/: __init__.py  indicator.py  monitor.py
debian/source/: options
docs/: conf.py  index.md  requirements.txt  user-guide.md
docs/api/: bluetooth_screen_lock.__init__.md  bluetooth_screen_lock.__main__.md  bluetooth_screen_lock.app.md  bluetooth_screen_lock.config.md  bluetooth_screen_lock.indicator.md  bluetooth_screen_lock.monitor.md  bluetooth_screen_lock.settings.md  index.md
scripts/: bluetooth-screen-lock
src/bluetooth_screen_lock/: __init__.py  __main__.py  app.py  config.py  file_ops.py  indicator.py  monitor.py  settings.py
systemd/user/: bluetooth-screen-lock.service
systemd/user/bluetooth-screen-lock.service.d/: hardening.conf
